--- a/index.html
+++ b/index.html
@@ -6,21 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>infinite scroll</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="#" />
 </head>
 <body>
     <!-- Title -->
-    <h1>Unsplash API - Infinite Scroll</h1>
+    <h1>Infinite Scroll Photos from Unsplash API</h1>
 <div class="loader" id="loader">
-    <img src="Bean Eater-1s-100px.svg" alt="leading">
+    <img src="Bean Eater-1s-100px.svg" alt="loading">
 </div>
 
 <div class="image-container" id="image-container">
-
-    <img src="https://images.unsplash.com/photo-1600063692377-7bc21fe8426e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=690&q=80" alt="">
-    <img src="https://images.unsplash.com/photo-1600063692377-7bc21fe8426e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=690&q=80" alt="">
-    <img src="https://images.unsplash.com/photo-1600063692377-7bc21fe8426e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=690&q=80" alt=""> 
 </div>
 
-<script src=script.js></script>
+<script src="script.js"></script>
 </body>
 </html>
